--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 26px;
     color: #777777;
     margin-bottom: 0px;
+    width: 100%;
 }
 
 button:focus {
