--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,30 @@ div ul li a.nav-link:hover{
 /*    font-size: 20px !important;*/
     color: rgba(255,160,122,0.7) !important;
 }
+#para {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    font-weight: normal;
+    margin-bottom: 12px;
+    color: #222222;
+    letter-spacing: 2.1px;
+}
+#header {
+    font-size: 48px;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    color: #222222;
+}
+#header2 {
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 20px;
+    color: #222222;
+    
+}
 
 body {
   line-height: 26px;
